<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/routine_hint_day">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/spinnerDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/routine_hint_start"
        app:startIconDrawable="@drawable/ic_schedule">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etStartTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/routine_hint_end"
        app:startIconDrawable="@drawable/ic_schedule">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEndTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/routine_hint_course">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCourse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textCapCharacters" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
