<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/routineToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/surfaceColor"
            app:navigationIcon="@drawable/ic_back"
            app:navigationIconTint="@color/textPrimary"
            app:title="@string/routine_title"
            app:titleTextColor="@color/textPrimary" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRoutine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingTop="8dp"
                android:paddingBottom="96dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_routine_entry" />

            <TextView
                android:id="@+id/tvRoutineEmpty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="32dp"
                android:fontFamily="@font/manrope_regular"
                android:gravity="center"
                android:text="@string/routine_empty"
                android:textColor="@color/textSecondary"
                android:textSize="15sp"
                android:visibility="gone"
                tools:visibility="visible" />
        </FrameLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddRoutine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:contentDescription="@string/routine_add"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/accent_schedule"
        app:tint="@color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
